--- a/File_Splitter_Merger.ipynb
+++ b/File_Splitter_Merger.ipynb
@@ -94,12 +94,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input_folder = ''\n",
+        "input_folder = 'Replace With Your File Path'\n",
         "\n",
         "#remember to give correct file extension as the original splitted file's extension\n",
         "#if you splitted the .mp4 file the output filename's extension should be .mp4 example marriage_video.mp4\n",
         "\n",
-        "output_filename = ''\n",
+        "output_filename = 'Replace with your file path'\n",
         "\n",
         "merge_chunks(input_folder, output_filename)"
       ],
