--- a/Unlim_Uploader.ipynb
+++ b/Unlim_Uploader.ipynb
@@ -13,25 +13,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Wu3EUJfntcK_",
-        "outputId": "3be018c5-caab-41d5-f76b-8a8a8676ebe2"
+        "id": "Wu3EUJfntcK_"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: telethon in /usr/local/lib/python3.10/dist-packages (1.34.0)\n",
-            "Requirement already satisfied: pyaes in /usr/local/lib/python3.10/dist-packages (from telethon) (1.6.1)\n",
-            "Requirement already satisfied: rsa in /usr/local/lib/python3.10/dist-packages (from telethon) (4.9)\n",
-            "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.10/dist-packages (from rsa->telethon) (0.5.1)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (4.66.2)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install telethon\n",
         "!pip install tqdm"
@@ -48,18 +32,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OAHRSHM88D2s",
-        "outputId": "ba4dcc73-5da5-47b2-d410-1958c8d66432"
+        "outputId": "45e941d4-8678-4257-bfb0-70af5cdaabe0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -107,6 +91,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Use This Below cell to Upload a single file**"
+      ],
+      "metadata": {
+        "id": "xVF7bIhHq5Cx"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -145,15 +138,24 @@
         "        time.sleep(2)\n",
         "        print('File Uploaded')\n",
         "async def main():\n",
-        "    file_to_upload = r\"/path_to_your_filename\"\n",
+        "    file_to_upload = r\"Your file path\"\n",
         "    await upload_to_telegram(file_to_upload)\n",
         "\n",
         "await main()\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Use this below cell to upload all files in a folder**"
+      ],
+      "metadata": {
+        "id": "nOPtdHETrME-"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "s5vJG8avijlA"
       },
