--- a/File_Splitter_Merger.ipynb
+++ b/File_Splitter_Merger.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "NUaxGFWIxY25"
       },
@@ -76,11 +76,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Below Cell will split your file into chunks (chunks are nothing but a large file will break into pieces which can be merged again to form original file without any data loss)**"
+      ],
+      "metadata": {
+        "id": "lZzz9HO8x5c1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "file_to_split = 'replace with your file path'\n",
+        "file_to_split = '/replace with your file path'\n",
         "\n",
-        "output_folder = 'replace with your file path'\n",
+        "output_folder = '/replace with your file path'\n",
         "\n",
         "#splits the file into chunks as 1.9Gb Each\n",
         "split_file(file_to_split,chunk_size = 1990 * 1024 * 1024, output_folder=output_folder)"
@@ -92,14 +101,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Below Cell will merge your chunks to original file**"
+      ],
+      "metadata": {
+        "id": "7poXXXevysgI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "input_folder = 'Replace With Your File Path'\n",
+        "input_folder = 'replace with your folder path'\n",
         "\n",
         "#remember to give correct file extension as the original splitted file's extension\n",
         "#if you splitted the .mp4 file the output filename's extension should be .mp4 example marriage_video.mp4\n",
         "\n",
-        "output_filename = 'Replace with your file path'\n",
+        "output_filename = '/replace with you filename.extension'\n",
         "\n",
         "merge_chunks(input_folder, output_filename)"
       ],
